[gd_scene load_steps=4 format=3 uid="uid://blttdencxm8cm"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_t5eoq"]
[ext_resource type="Texture2D" uid="uid://bgsjoxetgss21" path="res://graphics/Background/Brown.png" id="1_vng2a"]
[ext_resource type="Texture2D" uid="uid://b8dtdmugd27cb" path="res://graphics/cooltext451771599200889.png" id="2_grjii"]

[node name="main_menu" type="Node"]
script = ExtResource("1_t5eoq")

[node name="Background" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_vng2a")
stretch_mode = 1

[node name="Title" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -412.5
offset_top = -53.5
offset_right = 412.5
offset_bottom = 53.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_grjii")

[node name="level1" type="Button" parent="."]
offset_left = 309.0
offset_top = 434.0
offset_right = 517.0
offset_bottom = 520.0
theme_override_font_sizes/font_size = 30
text = "Level 1"

[node name="level2" type="Button" parent="."]
offset_left = 618.0
offset_top = 433.0
offset_right = 826.0
offset_bottom = 519.0
theme_override_font_sizes/font_size = 30
text = "Level 2"

[connection signal="pressed" from="level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="level2" to="." method="_on_level_2_pressed"]
